files/script/test_all_one/parse_error/def/test_def_error4.ll


def main(]
{

}
#script("script/test_all/parse_error/def/test_def_error4.ll")